<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/scrollView">

    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="450dp"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="artist placeholder"
        android:id="@+id/artistTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="album placeholder"
        android:id="@+id/albumTextView"
        android:layout_below="@+id/artistTextView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/albumArtImageView"
        android:layout_below="@+id/albumTextView"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:contentDescription="@string/album_artwork_content_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="song title placeholder"
        android:id="@+id/songTitleTextView"
        android:layout_below="@+id/albumArtImageView"
        android:layout_centerHorizontal="true" />

        <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nowPlayingSeekBar"
        android:layout_below="@+id/songTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/albumArtImageView"
        android:layout_alignRight="@+id/albumArtImageView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/nowPlayingSeekBar"
            android:layout_alignLeft="@+id/nowPlayingSeekBar"
            android:layout_alignRight="@+id/nowPlayingSeekBar"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/timeContainer">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/seekBarCurrentPosition"
            android:id="@+id/currentPositionTextView"
            android:layout_below="@+id/nowPlayingSeekBar"
            tools:ignore="RtlCompat"
            android:layout_alignParentStart="false"
            android:layout_alignLeft="@+id/nowPlayingSeekBar"
            android:layout_gravity="left"
                android:padding="0dp"
                android:layout_weight="1"
                android:gravity="left" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/songDurationTextView"
            android:id="@+id/songDurationTextView"
            android:layout_below="@+id/nowPlayingSeekBar"
            tools:ignore="RtlCompat"
            android:layout_toRightOf="@+id/nowPlayingSeekBar"
            android:padding="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <GridLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
            android:layout_centerHorizontal="true"
        android:id="@+id/buttonContainer"
        android:gravity="fill_horizontal"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
            android:layout_below="@+id/timeContainer">

        <ImageButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:id="@+id/previousButton"
            android:src="@android:drawable/ic_media_previous"
            android:layout_gravity="left"
            android:contentDescription="@string/accessibilitySkipPrevious"
            android:onClick="previousTrack"
            android:background="@drawable/round_button" />
        <ImageButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:id="@+id/playPauseButton"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/accessibilityPlayPause"
            android:layout_gravity="center_horizontal"
            android:onClick="playPauseToggle"
            android:background="@drawable/round_button" />
        <ImageButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:id="@+id/nextButton"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/accessibilitySkipNext"
            android:onClick="nextTrack"
            android:background="@drawable/round_button" />

    </GridLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Large"
        android:indeterminate="true"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true" />

</RelativeLayout>
</ScrollView>